crates/ty_python_semantic/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Multiple_starred_exp…_(3fbab22ead236138).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 623
expression: snapshot
---

---
mdtest name: invalid.md - Tests for invalid types in type expressions - Multiple starred expressions in a `tuple` specialization
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/invalid.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVarTuple
 2 | 
 3 | Ts = TypeVarTuple("Ts")
 4 | 
 5 | def f(
 6 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
 8 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
 9 |     # Multiple unpacked elements are fine, as long as the unpacked elements are not variadic:
10 |     z: tuple[*tuple[int, ...], *tuple[str]],
11 | ):
12 |     reveal_type(x)  # revealed: tuple[int | str, ...]
13 |     reveal_type(y)  # revealed: tuple[str | int, ...]
14 |     reveal_type(z)  # revealed: tuple[*tuple[int, ...], str]
15 | 
16 | # TypeVarTuple is allowed to appear multiple times in the same tuple, this is not the same
17 | # as an unbounded variadic tuple
18 | T1 = tuple[int, *Ts, str, *Ts]
19 | 
20 | def func3(t: tuple[*Ts]):
21 |     t5: tuple[*tuple[str], *Ts]  # OK
22 |     # Mixing a variadic tuple with a TypeVarTuple is also allowed
23 |     t6: tuple[*tuple[str, ...], *Ts]
```

# Diagnostics

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
 --> src/mdtest_snippet.py:7:8
  |
5 | def f(
6 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
  |        ^^^^^^----------------^^----------------^
  |              |                 |
  |              |                 Later unpacked variadic tuple
  |              First unpacked variadic tuple
8 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
9 |     # Multiple unpacked elements are fine, as long as the unpacked elements are not variadic:
  |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:8:8
   |
 6 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
 8 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
   |        ^^^^^^----------------^^^^^^^^^^^^----------------^
   |              |                           |
   |              |                           Later unpacked variadic tuple
   |              First unpacked variadic tuple
 9 |     # Multiple unpacked elements are fine, as long as the unpacked elements are not variadic:
10 |     z: tuple[*tuple[int, ...], *tuple[str]],
   |
info: rule `invalid-type-form` is enabled by default

```
